--- a/src/main/java/de/konnekting/suite/Main.form
+++ b/src/main/java/de/konnekting/suite/Main.form
@@ -269,14 +269,14 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JSplitPaneSupportLayout"/>
           <SubComponents>
-            <Component class="de.konnekting.suite.DeviceList" name="deviceList1">
+            <Component class="de.konnekting.suite.DeviceList" name="deviceList">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JSplitPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JSplitPaneSupportLayout$JSplitPaneConstraintsDescription">
                   <JSplitPaneConstraints position="left"/>
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="de.konnekting.suite.DeviceEditor" name="deviceEditor1">
+            <Component class="de.konnekting.suite.DeviceEditor" name="deviceEditor">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JSplitPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JSplitPaneSupportLayout$JSplitPaneConstraintsDescription">
                   <JSplitPaneConstraints position="right"/>
@@ -285,7 +285,7 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="de.konnekting.suite.ConsolePanel" name="consolePanel1">
+        <Component class="de.konnekting.suite.ConsolePanel" name="consolePanel">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JSplitPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JSplitPaneSupportLayout$JSplitPaneConstraintsDescription">
               <JSplitPaneConstraints position="right"/>
